able to update the check list result back to server

--- a/app/src/main/res/menu/aftersales_check_sheet_demo.xml
+++ b/app/src/main/res/menu/aftersales_check_sheet_demo.xml
@@ -1,5 +1,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/action_confirm"
+        android:title="Confirm"
+        android:icon="@drawable/ic_launcher" />
+    <item
+        android:id="@+id/action_cancel"
+        android:title="Cancel"
+        android:icon="@drawable/ic_launcher" />
+    <item
         android:id="@+id/action_stop"
         android:title="@string/action_stop"
         android:icon="@drawable/ic_stop" />
