--- a/app/src/main/res/layout/aftersales_check_sheet_demo_state.xml
+++ b/app/src/main/res/layout/aftersales_check_sheet_demo_state.xml
@@ -4,13 +4,12 @@
     android:layout_height="match_parent"
     tools:context=".AftersalesCheckSheetDemoService">
 
-
     <TextView
         android:id="@+id/state_text"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_alignParentLeft="false"
-        android:text="Loading..."
+        android:text="@string/CheckSheetDemo"
         android:textSize="60px"
         android:layout_alignParentBottom="false"
         android:layout_alignParentTop="false"
@@ -19,6 +18,5 @@
         android:background="#64000000"
         android:gravity="center_vertical|center_horizontal"
         android:padding="@dimen/card_margin" />
-
 
 </RelativeLayout>
