added new icons

--- a/app/src/main/res/menu/aftersales_check_sheet_demo.xml
+++ b/app/src/main/res/menu/aftersales_check_sheet_demo.xml
@@ -2,11 +2,11 @@
     <item
         android:id="@+id/action_confirm"
         android:title="Confirm"
-        android:icon="@drawable/ic_launcher" />
+        android:icon="@drawable/ic_confirm" />
     <item
         android:id="@+id/action_cancel"
         android:title="Cancel"
-        android:icon="@drawable/ic_launcher" />
+        android:icon="@drawable/ic_cancel" />
     <item
         android:id="@+id/action_stop"
         android:title="@string/action_stop"
