--- a/app/src/main/res/layout/aftersales_check_sheet_demo.xml
+++ b/app/src/main/res/layout/aftersales_check_sheet_demo.xml
@@ -15,27 +15,17 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
         android:scaleType="fitCenter"
-        android:background="#ffffffff" />
-
-    <ImageView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView2"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:scaleType="center"
-        android:background="#82000000" />
+        android:background="#ffffffff"
+        android:layout_alignParentStart="true"
+        android:alpha="0.5"
+        android:contentDescription="@string/backgroundImage" />
 
     <TextView
         android:id="@+id/instruction_text"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="false"
-        android:text="Inspect correct floor mats are used and properly installed"
-        android:textSize="30px"
+        android:textSize="20sp"
         android:gravity="left"
         android:layout_alignParentBottom="true"
         android:layout_alignParentTop="false"
@@ -43,7 +33,8 @@
         android:textColor="#ffffffff"
         android:background="#64000000"
         android:paddingLeft="@dimen/card_margin"
-        android:paddingRight="@dimen/card_margin" />
+        android:paddingRight="@dimen/card_margin"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:id="@+id/section_text"
@@ -51,14 +42,14 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="false"
         android:layout_alignParentLeft="true"
-        android:layout_marginBottom="0px"
-        android:text="Driver Seat"
-        android:textSize="26px"
+        android:layout_marginBottom="0dp"
+        android:textSize="16sp"
         android:layout_alignParentTop="true"
         android:gravity="left"
         android:textColor="#ffffffff"
         android:layout_marginRight="@dimen/card_margin"
-        android:paddingLeft="@dimen/card_margin" />
+        android:paddingLeft="@dimen/card_margin"
+        android:layout_alignParentStart="true" />
 
 
 </RelativeLayout>
